--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>buildingviz</title>
+    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKZE6mnRC0e9IuGcbzGji_XEjiRZirCkY&libraries=places"></script> -->
   </head>
   <body>
     <noscript>
